<resources>
    <string name="app_name">Wishlist App</string>
    <string name="OnboardText1">Create wishlists for events and personal purposes, attach links and photos</string>
    <string name="OnboardText2">Share your wishlists with your friends. You can turn on the booking option and each person will choose a gift to give for the celebration</string>
    <string name="OnboardText3">You don\'t have to worry about what to give your friend. Just go to his profile and see his wishlists</string>
    <string name="OnboardHead1">Сreate wishlists</string>
    <string name="OnboardHead2">Share with friends</string>
    <string name="OnboardHead3">Find out the desires of friends</string>
    <string name="ButtonNext">Next</string>
    <string name="ButtonStart">Start</string>
    <string name="button_sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="app_description">Wishlist booking app</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_create_account">Create account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="register_sign_in">Already have an account? Sign in</string>
    <string name="descritption__logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="new_wishlist">New wishlist</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="public_state">Public</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="max_reserve">Max reserve</string>
    <string name="items">Items</string>
    <string name="save">save</string>
    <string name="add_item">Add item</string>
    <string name="view_item">View item</string>
    <string name="annotation">Annotation</string>
    <string name="links">Links</string>
    <string name="photos">Photos</string>
    <string name="add">Add</string>
    <string name="my_wishlists">My wishlists</string>
    <string name="search">Search</string>
    <string name="wishlist_name">Wishlist Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="warning_title_delete">Deleting a wishlist</string>
    <string name="warning_title_delete_friend">Deleting a friend</string>
    <string name="confirm_title_add_friend">Adding to friends list</string>
    <string name="warning_text_delete">Do you really want to delete this wishlist?</string>
    <string name="warning_text_delete_friend">Do you really want to delete this friend?</string>
    <string name="confirm_text_add_friend">Do you really want to add this user to your friends list?</string>
    <string name="confirm_text_add_friend_approve">This user has sent you a friend request.\nApprove or reject the application?</string>
    <string name="no_info">-</string>
    <string name="_0">0</string>
    <string name="str_private">Private</string>
    <string name="profile">Profile</string>
    <string name="wishlists">Wishlists</string>
    <string name="edit_profile">Edit profile</string>
    <string name="friends">Friends</string>
    <string name="delete_friend">delete friend</string>
    <string name="no_public_wishlists">There is no data to display.\nThis user hasn\'t public wishlists</string>
    <string name="not_friend">You cannot view this user\'s wishlists.\nSend a friend request</string>
    <string name="not_friend_request">You cannot view this user\'s wishlists.\nWait for your friend request to be approved</string>
    <string name="book">Book</string>
</resources>