<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_50"
    tools:context=".ViewWishlistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_layout"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_back_home_from_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/back"
                    android:scaleType="fitStart"
                    android:src="@drawable/button_left_black" />

                <TextView
                    android:id="@+id/wl_view_name_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:fontFamily="@font/be_vietnam_semibold"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:text="@string/wishlist_name"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/edit_wishlist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/edit" />

                <ImageView
                    android:id="@+id/delete_wishlist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/delete" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/view_wl_image"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/image_picker"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/be_vietnam_semibold"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/be_vietnam_medium"
                android:text="@string/no_info"
                android:textAlignment="textStart"
                android:textColor="@color/base_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_private_public_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/resource_private" />

                <TextView
                    android:id="@+id/text_private_public"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:fontFamily="@font/be_vietnam_medium"
                    android:text="@string/str_private"
                    android:textAlignment="textStart"
                    android:textColor="@color/base_800" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/booking" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:fontFamily="@font/be_vietnam_medium"
                    android:text="@string/max_reserve"
                    android:textColor="@color/base_800" />

                <TextView
                    android:id="@+id/max_reserve_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:fontFamily="@font/be_vietnam_medium"
                    android:text="@string/_0"
                    android:textAlignment="textStart"
                    android:textColor="@color/base_800" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/layoutItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:background="@drawable/linear_layout_bottom"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/items"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_items_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingBottom="74dp" />

            </LinearLayout>


        </RelativeLayout>
        <!--            <androidx.recyclerview.widget.RecyclerView-->
        <!--                android:id="@+id/list_of_add_items"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_weight="1" />-->

    </LinearLayout>

</FrameLayout>