<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingLeft="24dp"
      android:paddingRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

      <ImageButton
          android:id="@+id/button_back_add_wishlist"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="6"
          android:background="#00FFFFFF"
          android:contentDescription="@string/back"
          android:scaleType="fitStart"
          android:src="@drawable/button_left_black" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/be_vietnam_semibold"
          android:paddingTop="12dp"
          android:paddingBottom="12dp"
          android:text="@string/add_item"
          android:textColor="#000000"
          android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_item_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_item_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/be_vietnam"
          android:gravity="center_vertical"
          android:hint="@string/name"
          android:paddingTop="12dp"
          android:paddingBottom="12dp"
          android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_item_annotation_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_item_annotation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/be_vietnam"
          android:gravity="center_vertical"
          android:hint="@string/annotation"
          android:paddingTop="12dp"
          android:paddingBottom="12dp"
          android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_item_links_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_item_links"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/be_vietnam"
          android:gravity="center_vertical"
          android:hint="@string/links"
          android:paddingTop="12dp"
          android:paddingBottom="12dp"
          android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

      <TextView
          android:id="@+id/btn_add_image_item"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="8dp"
          android:layout_weight="4"
          android:drawablePadding="0dp"
          android:fontFamily="@font/be_vietnam_medium"
          android:includeFontPadding="false"
          android:padding="0dp"
          android:text="Add image"
          android:textAlignment="textEnd"
          android:textColor="@color/purple_600"
          app:drawableLeftCompat="@drawable/plus" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/item_recycle_gallery_image"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="40dp"
          android:padding="4dp"
          android:scrollbarStyle="insideInset" />

      <FrameLayout
          android:id="@+id/bottom_frame_layout_add_item"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:background="@drawable/linear_layout_bottom"
          android:elevation="30dp">

        <Button
            android:id="@+id/btn_add_item_add_wl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_template"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/add"
            android:textColor="@color/base_0"
            app:cornerRadius="15dp" />

      </FrameLayout>
    </RelativeLayout>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>